--- a/Code Salfeet/css/style11.css
+++ b/Code Salfeet/css/style11.css
@@ -243,7 +243,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 
 
-/*==========Ã™â€¡Ã˜Â§Ã˜Â¯ Ã™â€žÃ™â€žÃ˜ÂªÃ˜Â§Ã˜Â¹ Ã˜Â§Ã™â€žÃ™â€šÃ˜Â§Ã˜Â¦Ã™â€¦Ã˜Â© Ã˜Â§Ã™â€žÃ™â€¦Ã™â€ Ã˜Â³Ã™â€ Ã˜Â¯Ã˜Â© Ã™â€¦Ã™â€  Ã˜Â§Ã˜Â¬Ã™â€ž Ã˜Â§ Ã™Å Ã˜Â¬Ã˜Â¹Ã™â€žÃ™â€¡ Ã™â€¦Ã˜Â«Ã™â€ž Ã˜Â§Ã™â€žÃ˜Â¨Ã™â€šÃ™Å Ã˜Â©============*/
+/*==========Ãƒâ„¢Ã¢â‚¬Â¡ÃƒËœÃ‚Â§ÃƒËœÃ‚Â¯ Ãƒâ„¢Ã¢â‚¬Å¾Ãƒâ„¢Ã¢â‚¬Å¾ÃƒËœÃ‚ÂªÃƒËœÃ‚Â§ÃƒËœÃ‚Â¹ ÃƒËœÃ‚Â§Ãƒâ„¢Ã¢â‚¬Å¾Ãƒâ„¢Ã¢â‚¬Å¡ÃƒËœÃ‚Â§ÃƒËœÃ‚Â¦Ãƒâ„¢Ã¢â‚¬Â¦ÃƒËœÃ‚Â© ÃƒËœÃ‚Â§Ãƒâ„¢Ã¢â‚¬Å¾Ãƒâ„¢Ã¢â‚¬Â¦Ãƒâ„¢Ã¢â‚¬Â ÃƒËœÃ‚Â³Ãƒâ„¢Ã¢â‚¬Â ÃƒËœÃ‚Â¯ÃƒËœÃ‚Â© Ãƒâ„¢Ã¢â‚¬Â¦Ãƒâ„¢Ã¢â‚¬Â  ÃƒËœÃ‚Â§ÃƒËœÃ‚Â¬Ãƒâ„¢Ã¢â‚¬Å¾ ÃƒËœÃ‚Â§ Ãƒâ„¢Ã…Â ÃƒËœÃ‚Â¬ÃƒËœÃ‚Â¹Ãƒâ„¢Ã¢â‚¬Å¾Ãƒâ„¢Ã¢â‚¬Â¡ Ãƒâ„¢Ã¢â‚¬Â¦ÃƒËœÃ‚Â«Ãƒâ„¢Ã¢â‚¬Å¾ ÃƒËœÃ‚Â§Ãƒâ„¢Ã¢â‚¬Å¾ÃƒËœÃ‚Â¨Ãƒâ„¢Ã¢â‚¬Å¡Ãƒâ„¢Ã…Â ÃƒËœÃ‚Â©============*/
 .gtco-nav ul li.has-dropdown a span {
   border: 2px solid rgba(255, 255, 255, 0.5);
   padding: 4px 20px;
@@ -410,7 +410,7 @@ h1, h2, h3, h4, h5, h6, figure {
   background-position: top center;
   background-repeat: no-repeat;
   position: relative;
-  height: 600px;
+  height: 763px;
 }
 
 .gtco-bg {
@@ -516,7 +516,7 @@ h1, h2, h3, h4, h5, h6, figure {
   top: 0;
   left: 0;
   right: 0;
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  /* background: linear-gradient(-135deg, #c850c0, #4158d0); */
 }
 .gtco-cover > .gtco-container {
   position: relative;
