--- a/Code Salfeet/css/bootstrap.css
+++ b/Code Salfeet/css/bootstrap.css
@@ -511,7 +511,7 @@ h6, .h6 {
 }
 
 p {
-  margin: 0 0 10px;
+  margin: 0px 0 10px;
 }
 
 .lead {
@@ -908,8 +908,8 @@ pre code {
 }
 
 .row {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 .row:before, .row:after {
   content: " ";
@@ -1394,6 +1394,7 @@ pre code {
 
   .col-md-12 {
     width: 100%;
+    margin-top: 20px;
   }
 
   .col-md-pull-0 {
